apps/plausible/base/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plausible
spec:
  type: LoadBalancer
  selector:
    app: plausible
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
